--- a/advertising/build.gradle
+++ b/advertising/build.gradle
@@ -11,7 +11,7 @@ android {
         versionCode 1
         versionName "1.0.0"
 
-//        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -28,4 +28,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.11"
 
     implementation  "io.reactivex.rxjava2:rxkotlin:2.3.0"
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.15.0'
+    androidTestImplementation 'com.android.support:support-annotations:28.0.0'
 }
